--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@pinia/nuxt": "^0.4.11",
     "pinia": "^2.1.3",
     "sass": "^1.62.1",
     "vuetify": "^3.3.2"
