--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "@pinia/nuxt": "^0.4.11",
+    "axios": "^1.4.0",
     "pinia": "^2.1.3",
     "sass": "^1.62.1",
     "vuetify": "^3.3.2"
