Start setting up dockerfile for python and update some API code

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM ruby:3.0.2
 
 RUN apt-get update -qq \
-    && apt-get install -y nodejs postgresql-client
+    && apt-get install -y nodejs postgresql-client python3-pip
 
 ADD . /backend
 WORKDIR /backend
