--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@pinia/nuxt": "^0.4.11",
     "axios": "^1.4.0",
     "pinia": "^2.1.3",
+    "recordrtc": "^5.6.2",
     "sass": "^1.62.1",
     "vuetify": "^3.3.2"
   }
