--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -12,6 +12,8 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+/app/scripts/.env
+/app/scripts/temp/
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
